Issue #10212: Support new buffer interface for struct.unpack and cStringIO